syntax = "proto3";

package userauth;

service AuthService {
  rpc RegisterUser (AuthRequest) returns (AuthResponse);
  rpc LoginUser (AuthRequest) returns (AuthResponse);
}

message AuthRequest {
  string email = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string message = 2;
}
